simple cleanup & improvements